Included success Test Case

--- a/project.json
+++ b/project.json
@@ -46,7 +46,7 @@
         "fileName": "MK_TestPageLoaded.xaml"
       },
       {
-        "editingStatus": "InProgress",
+        "editingStatus": "Publishable",
         "testCaseId": "2fbc4d04-abbe-4628-b9eb-911de558e553",
         "fileName": "MK_SuccessTestCase.xaml"
       },
